fix wrap issue

--- a/style.css
+++ b/style.css
@@ -21,17 +21,15 @@ h1 {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    align-content: space-around;
     width: 100%;
-    height: 100vh;
 }
 
-div, article {
+div {
     width: 24%;
     min-width: 400px;
-    height: 45%;
+    height: 25em;
     transition: 200ms;
-    margin-bottom: 2rem;
+    margin: 1rem 0;
 }
 
 div.background-img {
